# 2026-research-ibisx

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  JALONS.md  README.md  compose.prod.yml  docker-compose.yml
.claude/: .update-writer-ran  (+2 more)
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_jobs.py  0002_auth.py  0003_catalogue.py  0004_projects.py  0005_experiments.py  0006_xai.py  0007_admin.py  0008_chat_blocks.py  0009_explanation_blocks.py  0010_dataset_provenance.py  0011_explanation_blocks.py
apps/api/ibis/: __init__.py  cli.py  export_openapi.py  main.py
apps/api/ibis/core/: config.py  errors.py  logging.py  mailer.py  ratelimit.py  redis.py  security.py
apps/api/ibis/db/: base.py  engine.py  registry.py
apps/api/ibis/modules/admin/: models.py  routes.py
apps/api/ibis/modules/auth/: bootstrap.py  deps.py  google.py  models.py  routes.py  schemas.py  service.py
apps/api/ibis/modules/dashboard/: routes.py
apps/api/ibis/modules/datasets/: enrichment.py  ethics.py  filters.py  importer.py  kaggle_client.py  kaggle_import.py  models.py  profiling.py  routes.py  schemas.py  service.py
apps/api/ibis/modules/experiments/: models.py  routes.py  schemas.py  service.py
apps/api/ibis/modules/health/: routes.py
apps/api/ibis/storage/: __init__.py  base.py  local.py
apps/api/ibis/workers/: celery_app.py
apps/api/seed_data/: datasets.yaml
apps/api/seed_data/enriched/: abalone_age.json  adult_income.json  auto_mpg.json  bank_marketing.json  banknote_authentication.json  blood_transfusion.json  breast_cancer_wisconsin.json  california_housing.json  car_evaluation.json  contraceptive_choice.json  cps_wages_1985.json  diabetes_progression.json  energy_efficiency.json  gamma_telescope.json  german_credit.json  glass_identification.json  handwritten_digits.json  heart_disease.json  ionosphere.json  iris.json  mushroom.json  penguins.json  pima_diabetes.json  student_dropout.json  student_performance.json  titanic.json  wine_quality_red.json  wine_recognition.json
apps/api/seed_data/files/: adult_income.csv  auto_mpg.csv  bank_marketing.csv  breast_cancer_wisconsin.csv  california_housing.csv  energy_efficiency.csv  gamma_telescope.csv  handwritten_digits.csv  pima_diabetes.csv  student_dropout.csv  wine_recognition.csv
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_admin.py  test_auth.py  test_dashboard.py  test_datasets.py  test_ethics_review.py  test_experiments_api.py  test_google_oidc.py  test_health.py  test_import_seed.py  test_jobs.py  test_kaggle_import.py  test_projects.py  test_scoring_api.py  test_users_me.py  test_xai_api.py
apps/api/tests/unit/: test_config.py  test_dataset_enrichment.py  test_fairness.py  test_guide_blocks.py  test_kaggle_client.py  test_kaggle_notebook.py  test_llm_client.py  test_mailer.py  test_ml_quality_and_eval.py  test_preprocessing.py  test_profiling.py  test_rbac_deps.py  test_scoring_formulas.py  test_security.py  test_storage_local.py  test_xai_blocks.py  test_xai_quality.py  test_xai_text.py
(+419 files in other folders)
