[project]
name = "ibis-api"
version = "0.1.0"
description = "IBIS-X v2 — API backend (FastAPI) + worker Celery"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "structlog>=24.1.0",
    "sse-starlette>=2.1.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
ibis = "ibis.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ibis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:celery.*"]
